# floor_composer

./: .coverage  .mcp.json  CLAUDE.md  README.md  browse_db.py  create_clt_database.py  floor_composer.code-workspace  package-lock.json  polyline_generator.ipynb  polyline_generator.ipynb:Zone.Identifier  pyproject.toml  render.yaml  validate_deployment.py
backend/: Dockerfile  render.yaml  requirements.txt
backend/api/: main.py
backend/data/: .gitignore  building_section.json
backend/data/sources/: README.md  clt.csv
backend/notebooks/: .gitignore
backend/src/floor_composer/: __init__.py  utils.py  visualization.py
data/: components.db
examples/: basic_usage.py  create_default_data.py  web_demo.py
frontend/: Dockerfile  README.md  examples.html  next.config.ts  package-lock.json  package.json  render.yaml  selector.yaml
frontend/public/data/: arcelor_steel_deck_database.json  materials.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/corrugated/: page.tsx
frontend/src/components/: Header.tsx
frontend/src/lib/: d3-integration.ts  data-loader.ts  store.ts
frontend/src/types/: geometry.ts
shared/data-models/: README.md
shared/types/: clt.ts  geometry.ts  global.d.ts
src/: api_server.py
src/floor_composer/: cofrastra_db.py  components_db.py  core.py  factories.py  materials.py  web_export.py
src/initial_data/: cofraplus_80_database.json  cofrastra.csv  cofrastra_40_database.json
src/initial_data/documentation/: clt.csv:Zone.Identifier  cofrastra.xlsx
src/initial_data/old/: arcelor_steel_deck_database-old.json  cofraplus_80_database - source.json  cofrastra_40_database - source.json
tests/: __init__.py  test_core.py
web/: legacy_serve.py  package-lock.json  package.json
web/public/data/: clt_database.json  clt_floor_database.json  corrugated_system.json  curves.json  floor_profile.json
web/src/app/: page.tsx
web/src/app/clt/: page.tsx
web/src/components/: Header.tsx
web/src/lib/: clt-utils.ts  d3-integration.ts
web_react/.next/: trace
(+16 files in other folders)
